--- a/.classpath
+++ b/.classpath
@@ -4,7 +4,7 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry exported="true" kind="con" path="GROOVY_SUPPORT"/>
 	<classpathentry exported="true" kind="con" path="GROOVY_DSL_SUPPORT"/>
-	<classpathentry kind="con" path="REPAST_SIMPHONY_SUPPORT"/>
+	<classpathentry exported="true" kind="con" path="REPAST_SIMPHONY_SUPPORT"/>
 	<classpathentry kind="lib" path="/Users/gabi/Documents/workspace/LanguageCompetitionDiffusion/lwjgl-2.9.2/jar/lwjgl.jar">
 		<attributes>
 			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="/Users/gabi/Documents/workspace/LanguageCompetitionDiffusion/lwjgl-2.9.2/native/macosx"/>
@@ -16,5 +16,7 @@
 			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="/Users/gabi/jogamp-all-platforms/jar/atomic"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry exported="true" kind="lib" path="/Applications/Repast Simphony 2.2/eclipse/plugins/repast.simphony.runtime_2.2.0/bin"/>
+	<classpathentry kind="lib" path="/Applications/Repast Simphony 2.2/eclipse/plugins/repast.simphony.distributed.batch_2.2.0"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
